[lworld] TestArrayCopyAsLoadsStores.java triggers assert after merging jdk-19+15

XMLWordPrintable

      Bad graph detected in build_loop_late
      n: 116 CheckCastPP === 285 70 [[ 239 239 232 132 139 232 226 153 180 226 219 219 206 206 ]] #narrowoop: compiler/arraycopy/TestArrayCopyUtils$A *[int:>=0]:NotNull:exact * !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      early(n): 285 IfFalse === 284 [[ 116 280 ]] #0 !orig=[114] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->in(1): 70 Phi === 68 69 67 [[ 116 105 105 120 ]] #narrowoop: java/lang/Object *[int:5]:NotNull * !orig=[79] !jvms: TestArrayCopyAsLoadsStores::helper17_1 @ bci:19 (line 217) TestArrayCopyAsLoadsStores::m17 @ bci:1 (line 227)
      early(n->in(1)): 68 Region === 68 62 63 [[ 68 288 70 ]] !jvms: TestArrayCopyAsLoadsStores::helper17_1 @ bci:19 (line 217) TestArrayCopyAsLoadsStores::m17 @ bci:1 (line 227)
      n->in(1)->in(1): 69 ConP === 0 [[ 70 ]] #narrowoop: java/lang/Object *[int:5]<ciObjArray length=5 type=<ciObjArrayKlass name=[Ljava/lang/Object; ident=1286 address=0x00007f1f98489628> ident=1293 address=0x00007f1f9848bb80> *
      early(n->in(1)->in(1)): 0 Root === 0 124 136 157 274 275 [[ 0 1 3 240 233 36 38 47 54 220 67 69 83 84 85 88 91 95 97 104 119 174 131 143 152 170 168 164 165 292 293 294 ]] inner
      n->in(1)->in(2): 67 ConP === 0 [[ 70 ]] #narrowoop: compiler/arraycopy/TestArrayCopyUtils$A *[int:5]<ciObjArray length=5 type=<ciObjArrayKlass name=[Lcompiler/arraycopy/TestArrayCopyUtils$A; ident=1283 address=0x00007f1f98487de0> ident=1292 address=0x00007f1f9848b398> *
      early(n->in(1)->in(2)): 0 Root === 0 124 136 157 274 275 [[ 0 1 3 240 233 36 38 47 54 220 67 69 83 84 85 88 91 95 97 104 119 174 131 143 152 170 168 164 165 292 293 294 ]] inner

      LCA(n): 68 Region === 68 62 63 [[ 68 288 70 ]] !jvms: TestArrayCopyAsLoadsStores::helper17_1 @ bci:19 (line 217) TestArrayCopyAsLoadsStores::m17 @ bci:1 (line 227)
      n->out(0): 239 AddP === _ 116 116 240 [[ 242 ]] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(0)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(0)->out(0): 242 LoadN === 194 238 239 [[ 245 ]] @narrowoop: compiler/arraycopy/TestArrayCopyUtils$A *[int:>=0]:NotNull:exact+any * [narrow], idx=10; #narrowoop: compiler/arraycopy/TestArrayCopyUtils$A * !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(0)->out(0)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(1): 239 AddP === _ 116 116 240 [[ 242 ]] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(1)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(1)->out(0): 242 LoadN === 194 238 239 [[ 245 ]] @narrowoop: compiler/arraycopy/TestArrayCopyUtils$A *[int:>=0]:NotNull:exact+any * [narrow], idx=10; #narrowoop: compiler/arraycopy/TestArrayCopyUtils$A * !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(1)->out(0)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(2): 232 AddP === _ 116 116 233 [[ 235 ]] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(2)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(2)->out(0): 235 LoadN === 194 231 232 [[ 238 ]] @narrowoop: compiler/arraycopy/TestArrayCopyUtils$A *[int:>=0]:NotNull:exact+any * [narrow], idx=10; #narrowoop: compiler/arraycopy/TestArrayCopyUtils$A * !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(2)->out(0)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(3): 132 CallStaticJava === 289 6 7 8 9 ( 131 1 1 1 1 116 83 84 ) [[ 133 ]] # Static uncommon_trap(reason='intrinsic_or_type_checked_inlining' action='maybe_recompile' debug_id='0') void ( int ) C=0,000100 TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) reexecute TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228) !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(3)->out(0): 133 Proj === 132 [[ 136 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(4): 139 SubTypeCheck === _ 116 91 [[ 279 ]] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(4)): 285 IfFalse === 284 [[ 116 280 ]] #0 !orig=[114] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(4)->out(0): 279 Bool === _ 139 [[ 280 ]] [ne]
      later(n->out(4)->out(0)): 285 IfFalse === 284 [[ 116 280 ]] #0 !orig=[114] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(5): 232 AddP === _ 116 116 233 [[ 235 ]] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(5)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(5)->out(0): 235 LoadN === 194 231 232 [[ 238 ]] @narrowoop: compiler/arraycopy/TestArrayCopyUtils$A *[int:>=0]:NotNull:exact+any * [narrow], idx=10; #narrowoop: compiler/arraycopy/TestArrayCopyUtils$A * !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(5)->out(0)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(6): 226 AddP === _ 116 116 143 [[ 228 ]] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(6)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(6)->out(0): 228 LoadN === 194 225 226 [[ 231 ]] @narrowoop: compiler/arraycopy/TestArrayCopyUtils$A *[int:>=0]:NotNull:exact+any * [narrow], idx=10; #narrowoop: compiler/arraycopy/TestArrayCopyUtils$A * !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(6)->out(0)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(7): 153 CallStaticJava === 282 6 7 8 9 ( 152 1 1 1 1 116 83 84 ) [[ 154 ]] # Static uncommon_trap(reason='class_check' action='make_not_entrant' debug_id='0') void ( int ) C=0,000100 TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) reexecute TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228) !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(7)->out(0): 154 Proj === 153 [[ 157 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(8): 180 AllocateArray === 281 6 7 8 1 ( 175 91 36 83 _ _ _ 38 1 1 1 1 116 83 84 ) [[ 181 182 183 190 191 192 ]] rawptr:NotNull ( int:>=0, java/lang/Object:NotNull *, bool, int, bottom, java/lang/Object:NotNull *, long, bool ) TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) reexecute TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228) !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(8)->out(0): 181 Proj === 180 [[ 184 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(9): 226 AddP === _ 116 116 143 [[ 228 ]] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(9)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(9)->out(0): 228 LoadN === 194 225 226 [[ 231 ]] @narrowoop: compiler/arraycopy/TestArrayCopyUtils$A *[int:>=0]:NotNull:exact+any * [narrow], idx=10; #narrowoop: compiler/arraycopy/TestArrayCopyUtils$A * !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(9)->out(0)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(10): 219 AddP === _ 116 116 220 [[ 222 ]] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(10)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(10)->out(0): 222 LoadN === 194 217 219 [[ 225 ]] @narrowoop: compiler/arraycopy/TestArrayCopyUtils$A *[int:>=0]:NotNull:exact+any * [narrow], idx=10; #narrowoop: compiler/arraycopy/TestArrayCopyUtils$A * !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(10)->out(0)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(11): 219 AddP === _ 116 116 220 [[ 222 ]] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(11)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(11)->out(0): 222 LoadN === 194 217 219 [[ 225 ]] @narrowoop: compiler/arraycopy/TestArrayCopyUtils$A *[int:>=0]:NotNull:exact+any * [narrow], idx=10; #narrowoop: compiler/arraycopy/TestArrayCopyUtils$A * !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(11)->out(0)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(12): 206 AddP === _ 116 116 88 [[ 214 ]] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(12)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(12)->out(0): 214 LoadN === 194 195 206 [[ 217 ]] @narrowoop: compiler/arraycopy/TestArrayCopyUtils$A *[int:>=0]:NotNull:exact+any * [narrow], idx=10; #narrowoop: compiler/arraycopy/TestArrayCopyUtils$A * !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(12)->out(0)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(13): 206 AddP === _ 116 116 88 [[ 214 ]] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(13)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      n->out(13)->out(0): 214 LoadN === 194 195 206 [[ 217 ]] @narrowoop: compiler/arraycopy/TestArrayCopyUtils$A *[int:>=0]:NotNull:exact+any * [narrow], idx=10; #narrowoop: compiler/arraycopy/TestArrayCopyUtils$A * !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      later(n->out(13)->out(0)): 194 Proj === 193 [[ 274 197 242 258 217 214 225 222 231 228 238 235 245 ]] #0 !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)

      idoms of early 285:
      idom[0] 285 IfFalse === 284 [[ 116 280 ]] #0 !orig=[114] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      idom[1] 284 If === 290 283 [[ 285 286 ]] P=0,000000, C=-1,000000 !orig=[113] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      idom[2] 290 IfTrue === 288 [[ 284 ]] #1 !orig=[102] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      idom[3] 288 If === 68 287 [[ 289 290 ]] P=0,500000, C=-1,000000 !orig=[100] !jvms: TestArrayCopyAsLoadsStores::helper17_2 @ bci:4 (line 221) TestArrayCopyAsLoadsStores::m17 @ bci:6 (line 228)
      idom[4] 68 Region === 68 62 63 [[ 68 288 70 ]] !jvms: TestArrayCopyAsLoadsStores::helper17_1 @ bci:19 (line 217) TestArrayCopyAsLoadsStores::m17 @ bci:1 (line 227)
      idom[5] 61 If === 5 60 [[ 62 63 ]] P=0,500074, C=6785,000000 !jvms: TestArrayCopyAsLoadsStores::helper17_1 @ bci:5 (line 212) TestArrayCopyAsLoadsStores::m17 @ bci:1 (line 227)
      idom[6] 5 Parm === 3 [[ 61 ]] Control !jvms: TestArrayCopyAsLoadsStores::m17 @ bci:-1 (line 227)

      idoms of (wrong) LCA 68:
      idom[0] 68 Region === 68 62 63 [[ 68 288 70 ]] !jvms: TestArrayCopyAsLoadsStores::helper17_1 @ bci:19 (line 217) TestArrayCopyAsLoadsStores::m17 @ bci:1 (line 227)
      idom[1] 61 If === 5 60 [[ 62 63 ]] P=0,500074, C=6785,000000 !jvms: TestArrayCopyAsLoadsStores::helper17_1 @ bci:5 (line 212) TestArrayCopyAsLoadsStores::m17 @ bci:1 (line 227)
      idom[2] 5 Parm === 3 [[ 61 ]] Control !jvms: TestArrayCopyAsLoadsStores::m17 @ bci:-1 (line 227)

      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/loopnode.cpp:6023
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/oracle/valhalla2/open/src/hotspot/share/opto/loopnode.cpp:6023), pid=643260, tid=643273
      # assert(real_LCA != __null) failed: must always find an LCA
      #
      # JRE version: Java(TM) SE Runtime Environment (19.0) (fastdebug build 19-lworld3ea-2021-10-19-1138180.tobias...)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 19-lworld3ea-2021-10-19-1138180.tobias..., mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x1446247] PhaseIdealLoop::dump_real_LCA(Node*, Node*)+0x5a7
      #
      # No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
      #
      # An error report file with more information is saved as:
      # /oracle/valhalla2/open/JTwork/scratch/hs_err_pid643260.log
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #

            Assignee:
            Tobias Hartmann
            Reporter:
            David Simms
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: