8283777: [lworld] TestArrayCopyAsLoadsStores.java triggers assert after merging jdk-19+15