src/hotspot/share/opto/library_call.cpp
@@ -3890,28 +3890,6 @@ bool LibraryCallKit::inline_array_copyOf(bool is_copyOfRange) {
       klass_node = _gvn.transform(cast);
     }
 
-    Node* original_kls = load_object_klass(original);
-    // ArrayCopyNode:Ideal may transform the ArrayCopyNode to
-    // loads/stores but it is legal only if we're sure the
-    // Arrays.copyOf would succeed. So we need all input arguments
-    // to the copyOf to be validated, including that the copy to the
-    // new array won't trigger an ArrayStoreException. That subtype
-    // check can be optimized if we know something on the type of
-    // the input array from type speculation.
-    if (_gvn.type(klass_node)->singleton() && !stopped()) {
-      ciKlass* subk   = _gvn.type(original_kls)->is_klassptr()->klass();
-      ciKlass* superk = _gvn.type(klass_node)->is_klassptr()->klass();
-
-      int test = C->static_subtype_check(superk, subk);
-      if (test != Compile::SSC_always_true && test != Compile::SSC_always_false) {
-        const TypeOopPtr* t_original = _gvn.type(original)->is_oopptr();
-        if (t_original->speculative_type() != NULL) {
-          original = maybe_cast_profiled_obj(original, t_original->speculative_type(), true);
-          original_kls = load_object_klass(original);
-        }
-      }
-    }
-
     // Bail out if either start or end is negative.
     generate_negative_guard(start, bailout, &start);
     generate_negative_guard(end,   bailout, &end);
@@ -3945,7 +3923,7 @@ bool LibraryCallKit::inline_array_copyOf(bool is_copyOfRange) {
                  ((!klass->is_flat_array_klass() && klass->can_be_inline_array_klass()) || !can_validate)) {
         // Src might be flat and dest might not be flat. Go to the slow path if src is flat.
         // TODO 8251971: Optimize for the case when src/dest are later found to be both flat.
-        generate_fair_guard(flat_array_test(original_kls), bailout);
+        generate_fair_guard(flat_array_test(load_object_klass(original)), bailout);
         if (orig_t != NULL) {
           orig_t = orig_t->cast_to_not_flat();
           original = _gvn.transform(new CheckCastPPNode(control(), original, orig_t));
@@ -3978,6 +3956,26 @@ bool LibraryCallKit::inline_array_copyOf(bool is_copyOfRange) {
       // Extreme case:  Arrays.copyOf((Integer[])x, 10, String[].class).
       // This will fail a store-check if x contains any non-nulls.
 
+      // ArrayCopyNode:Ideal may transform the ArrayCopyNode to
+      // loads/stores but it is legal only if we're sure the
+      // Arrays.copyOf would succeed. So we need all input arguments
+      // to the copyOf to be validated, including that the copy to the
+      // new array won't trigger an ArrayStoreException. That subtype
+      // check can be optimized if we know something on the type of
+      // the input array from type speculation.
+      if (_gvn.type(klass_node)->singleton()) {
+        ciKlass* subk   = _gvn.type(load_object_klass(original))->is_klassptr()->klass();
+        ciKlass* superk = _gvn.type(klass_node)->is_klassptr()->klass();
+
+        int test = C->static_subtype_check(superk, subk);
+        if (test != Compile::SSC_always_true && test != Compile::SSC_always_false) {
+          const TypeOopPtr* t_original = _gvn.type(original)->is_oopptr();
+          if (t_original->speculative_type() != NULL) {
+            original = maybe_cast_profiled_obj(original, t_original->speculative_type(), true);
+          }
+        }
+      }
+
       bool validated = false;
       // Reason_class_check rather than Reason_intrinsic because we
       // want to intrinsify even if this traps.
@@ -3998,7 +3996,7 @@ bool LibraryCallKit::inline_array_copyOf(bool is_copyOfRange) {
         newcopy = new_array(klass_node, length, 0);  // no arguments to push
 
         ArrayCopyNode* ac = ArrayCopyNode::make(this, true, original, start, newcopy, intcon(0), moved, true, false,
-                                                original_kls, klass_node);
+                                                load_object_klass(original), klass_node);
         if (!is_copyOfRange) {
           ac->set_copyof(validated);
         } else {
